Cleaner generation of an unmodifieable list in ProtobufCodecSupport